<resources>
    <string name="app_name">GroupStudy</string>

    <string name="login_button">Log In</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="title_activity_create_new_account">CreateNewAccountActivity</string>

    <!--login_screen.xml-->
    <string name="create_account">Create Account</string>

    <!--create_new_account.xml/login screen-->
    <string name="enter_username">Username</string>
    <string name="enter_password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <!-- Group Nav Drawer Menu Items -->
    <string-array name="nav_drawer_group_items">
        <item>Home</item>
        <item>Groups</item>
        <item>Tasks</item>
        <item>Messages</item>
        <item>Files</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>

    <!-- Home Page Nav Drawer Menu Items -->
    <string-array name="nav_drawer_home_page_items">
        <item>Home</item>
        <item>About</item>
        <item>Log Out</item>
    </string-array>

    <!--Nav Drawer-->
    <string name="menu">Menu</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_closed">Drawer closed</string>

    <!--App Home Page-->
    <string name="groups">Groups</string>

    <!--Group Home Page-->
    <string name="upcoming_tasks">Upcoming Tasks</string>
    <string name="new_messages">Recent Messages</string>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>

    <string name="upload_file">Upload File</string>
    <string name="save_file">Save File</string>
    <string name="new_task">New Task</string>
    <string name="use_eid">Please use your UT EID as your username</string>
    <string name="title_activity_add_group">AddGroupActivity</string>
    <string name="create_group">Create Group</string>
    <string name="add_member">Add Teammate</string>
    <string name="delete_member">Delete Teammate</string>
    <string name="members_name">Member\'s Username</string>

    <!-- Calendar -->
    <string name="create_task">Create</string>
    <string name="add_description">Enter description</string>
    <string name="task_desc">Description</string>
    <string name="task_loc">Location</string>

    <!-- Message Fragment -->
    <string name="hint">Type a message</string>
    <string name="button">SEND</string>
    <string name="title_activity_add_member_to_group">AddMemberToGroupActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_delete_member_from_group">DeleteMemberFromGroupActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
