<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_marginTop="20dp">

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/create_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_username"
            android:theme="@style/EditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <EditText
        android:id="@+id/create_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:hint="@string/enter_password"
        android:theme="@style/EditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:theme="@style/EditTextTheme"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/create_account"
        android:onClick="create"/>
</LinearLayout>